--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo app</title>
+    <link rel = 'stylesheet' href="styles.css">
 </head>
 <body>
-    
+    <div id = 'terminal' spellcheck="false">todo-app$</div>
 </body>
 </html>
