--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo app</title>
-    <link rel = 'stylesheet' href="../css/styles.css">
-    <script src = '../js/index.js' defer></script>
+    <link rel = 'stylesheet' href="css/styles.css">
+    <script src = 'js/index.js' defer></script>
 </head>
 <body>
     <div id = 'terminal' spellcheck="false">
